# Tetris

./: '  .gitignore  .matrix.h.swp  .plan.txt.swp  .rawMode.h.swp  .tetris.c.swp  .windows.h.swp  CMakeLists.txt  Makefile  README.md  Tetris.vcxproj  Tetris.vcxproj.filters  buff.c  config.c  config.h  error.c  error.h  global.c  global.h  main.c  matrix.h  object.c  plan.txt  platform.h  r.sh  rawMode.c  rawMode.h  t2.c  t9.c  test.c  tetris  tetris.c  tetris.sln  todo.md  utils.c  utils.h  window.h  windows.h
game/: CMakeLists.txt
game/src/: defines.h  main.c
game/src/containers/: darray.c  darray.h
game/src/core/: files.h  kmemory.c  kmemory.h  logger.c  logger.h  rawmode.c  rawmode.h
game/src/platform/: platform.h
tests/: CMakeLists.txt  testmanager.c  testmanager.h
tests/darray/: darray.c
